--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ nav{
 nav ul{
     display: flex;
     list-style-type: none;
-    height: 60px;
+    height: 65 px;
     background-color: black;
     color: white;
     align-items: center;
@@ -44,12 +44,21 @@ nav ul li {
 
 .container{
     min-height: 75vh;
+    background-color: black;
+    color: white;
+   font-family: 'Varela Round', sans-serif;
+   display: flex;
+   margin: 23px auto;
+   width: 70%;
+   border-radius: 12px;
+   padding: 34px;
+   background-image: url('images/bg.jpg');
 }
 
 .bottom{
     position: sticky;
-    bottom: 0;
-    height: 130px;
+    bottom: 2 px;
+    height: 110px;
     background-color: black;
     color: white;
     display: flex;
@@ -58,7 +67,61 @@ nav ul li {
     flex-direction: column;
 }
 
+.icons{
+    margin-top: 14px;
+    margin-bottom: 14px; 
+}
+.icons i{
+    cursor: pointer;
+}
+
 #myProgressBar{
+    
     width: 80vw; 
     cursor: pointer;
 }
+
+.songItemContainer{
+    margin-top: 74px;
+}
+
+.songItem{
+    height: 50px;
+    display: flex;
+    background-color: white;
+    
+    color: black;
+    margin: 12px 0;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 34px;
+}
+
+.songItem img{
+    width: 43px;
+    margin: 0 23px;
+    border-radius: 34px;
+}
+
+.timestamp{
+    margin: 0 23px;
+}
+
+.timestamp i{
+    cursor: pointer;
+}
+
+.songInfo{
+    position: absolute;
+    left: 10vw;
+    font-family: 'Varela Round', sans-serif;
+}
+
+.songInfo img{
+    opacity: 0;
+    transition: opacity 0.4s ease-in;
+}
+/* 
+#gif{
+    opacity: 1;
+} */
